--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,12 @@
 buildscript {
-    ext {
-        compose_version = '1.3.0-beta01'
+    ext.compose_version = '1.3.0-beta01'
+
+    dependencies {
+        classpath 'app.cash.molecule:molecule-gradle-plugin:0.4.0'
+    }
+
+    repositories {
+        mavenCentral()
     }
 }
 
