--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,6 +12,7 @@ android {
 
         minSdk 21
         targetSdk 32
+
         versionCode 1
         versionName "1.0"
 
@@ -36,7 +37,7 @@ android {
     }
 
     composeOptions {
-        kotlinCompilerExtensionVersion compose_version
+        kotlinCompilerExtensionVersion '1.3.0-beta01'
     }
 
     packagingOptions {
@@ -52,15 +53,15 @@ android {
 
 dependencies {
     implementation 'androidx.core:core-ktx:1.8.0'
-    implementation "androidx.compose.ui:ui:$compose_version"
+    implementation 'androidx.compose.ui:ui:1.3.0-beta01'
     implementation 'androidx.compose.material3:material3:1.0.0-beta01'
-    implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
+    implementation "androidx.compose.ui:ui-tooling-preview:1.3.0-beta01"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
     implementation 'androidx.activity:activity-compose:1.5.1'
-    implementation 'app.cash.molecule:molecule-gradle-plugin:0.4.0'
+    // implementation 'app.cash.molecule:molecule-gradle-plugin:0.4.0'
 
-    debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
-    debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
+    debugImplementation 'androidx.compose.ui:ui-test-manifest:1.3.0-beta01'
+    debugImplementation 'androidx.compose.ui:ui-tooling:1.3.0-beta01'
 
     testImplementation 'junit:junit:4.13.2'
     testImplementation 'org.jetbrains.kotlin:kotlin-test'
