--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,10 @@
 *.iml
 .gradle
+gradlew.bat
 /local.properties
-/.idea/caches
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
-/.idea/navEditor.xml
-/.idea/assetWizardSettings.xml
+**/.idea/*
+!/.idea/vcs.xml
+!/.idea/copyright/
 .DS_Store
 /build
 /captures
