--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,13 +59,15 @@ dependencies {
   implementation "androidx.compose.ui:ui-tooling-preview:1.3.0-beta01"
   implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
   implementation 'androidx.activity:activity-compose:1.5.1'
-  // implementation 'app.cash.molecule:molecule-gradle-plugin:0.4.0'
+  implementation 'app.cash.molecule:molecule-gradle-plugin:0.4.0'
 
   debugImplementation 'androidx.compose.ui:ui-test-manifest:1.3.0-beta01'
   debugImplementation 'androidx.compose.ui:ui-tooling:1.3.0-beta01'
 
+  testImplementation 'app.cash.turbine:turbine:0.9.0'
   testImplementation 'junit:junit:4.13.2'
   testImplementation 'org.jetbrains.kotlin:kotlin-test'
+  testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4'
 }
 
 tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
