--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,16 +53,17 @@ android {
 }
 
 dependencies {
-  implementation 'androidx.core:core-ktx:1.8.0'
-  implementation 'androidx.compose.ui:ui:1.3.0-beta01'
-  implementation 'androidx.compose.material3:material3:1.0.0-beta01'
-  implementation "androidx.compose.ui:ui-tooling-preview:1.3.0-beta01"
-  implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
   implementation 'androidx.activity:activity-compose:1.5.1'
+  implementation 'androidx.compose.material3:material3:1.0.0-beta01'
+  implementation 'androidx.compose.ui:ui:1.3.0-beta01'
+  implementation 'androidx.core:core-ktx:1.8.0'
+  implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
+  implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1'
   implementation 'app.cash.molecule:molecule-gradle-plugin:0.4.0'
 
   debugImplementation 'androidx.compose.ui:ui-test-manifest:1.3.0-beta01'
   debugImplementation 'androidx.compose.ui:ui-tooling:1.3.0-beta01'
+  debugImplementation "androidx.compose.ui:ui-tooling-preview:1.3.0-beta01"
 
   testImplementation 'app.cash.turbine:turbine:0.9.0'
   testImplementation 'junit:junit:4.13.2'
