--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,7 @@ android {
 
 dependencies {
   implementation 'androidx.activity:activity-compose:1.5.1'
+  implementation 'androidx.compose.foundation:foundation:1.2.1'
   implementation 'androidx.compose.material3:material3:1.0.0-beta01'
   implementation 'androidx.compose.ui:ui:1.3.0-beta01'
   implementation 'androidx.core:core-ktx:1.8.0'
