--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,8 @@ dependencies {
   implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
   implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1'
 
+  implementation 'io.reactivex.rxjava2:rxjava:2.2.21'
+
   debugImplementation 'androidx.compose.ui:ui-test-manifest:1.3.0-beta01'
   debugImplementation 'androidx.compose.ui:ui-tooling:1.3.0-beta01'
   debugImplementation "androidx.compose.ui:ui-tooling-preview:1.3.0-beta01"
